[build-system]
requires = ["setuptools>=42", "wheel"]
# requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
 
[project]
name = "ddapm-test-agent"
version = "0.1.0"
description = "Test agent for Datadog APM client libraries"
readme = "README.md"
license = { text = "BSD 3-Clause" }
authors = [
    { name = "Kyle Verhoog", email = "kyle@verhoog.ca" }
]
urls = { "Homepage" = "https://github.com/Datadog/dd-apm-test-agent" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp",
    "ddsketch[serialization]",
    "msgpack",
    "requests",
    "typing_extensions",
    "yarl",
]
 
[project.optional-dependencies]
testing = [
    "pytest",
    "ddtrace==2.6.0",
    "riot==0.13.0",
]
 
[project.scripts]
ddapm-test-agent = "ddapm_test_agent.agent:main"
ddapm-test-agent-fmt = "ddapm_test_agent.fmt:main"
ddapm-test-agent-session-start = "ddapm_test_agent.cmd:main_session_start"
ddapm-test-agent-snapshot = "ddapm_test_agent.cmd:main_snapshot"
 
[tool.setuptools.packages.find]
exclude = ["tests*"]
 
# [tool.setuptools_scm]
# version_scheme = "guess-next-dev"
# local_scheme = "node-and-date"

# [tool.setuptools_scm]
# version_scheme = "post-release"

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true
known_first_party = "ddapm_test_agent"
default_section = "THIRDPARTY"
skip = [".riot/", ".venv/", "public_api/"]
line_length = 120
profile = "black"
 
[tool.black]
line_length = 120
exclude = '''
(
  /(
    \.riot
  | \.venv.*
  | \.eggs
  | public_api
  )/
)
'''
 
[tool.flake8]
application-import-name = "ddapm_test_agent"
exclude = [
  ".riot",
  ".git",
  ".venv",
  ".eggs",
  "__pycache__",
  "*.eggs-info",
  "build"
]
ignore = ["E501", "W503", "E203", "E231", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205", "D400", "D402", "B902", "I100", "I202", "A005"]
enable-extensions = ["G"]
import-order-style = "google"
 
[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
no_implicit_optional = true
files = ["ddapm_test_agent", "tests"]
 
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.py",
    "--color=yes",
    "--show-capture=all",
    "--durations=10",
    "--basetemp=/tmp/pytest"
]
testpaths = [
    "ddapm_test_agent",
    "tests"
]
log_level = "DEBUG"
filterwarnings = [
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning"
]